@@ -1,3 +1,8 @@
+2008-10-17  Christophe Romain <christophe.romain@process-one.net>
+
+	* src/mod_pubsub/mod_pubsub.erl: fix badarg issue on get_roster_info
+	when allowed roster groups is not defined
+
 2008-10-13  Jerome Sautret  <jerome.sautret@process-one.net>
 
 	* src/odbc/ejabberd_odbc.erl: log MySQL driver messages.
